Enable teasers and adjust UX for post lists

--- a/drafts/Hakyll/2018-11-30-hakyll.md
+++ b/drafts/Hakyll/2018-11-30-hakyll.md
@@ -3,6 +3,10 @@ title: Hakyll
 tags: haskell, hakyll
 ---
 
+This post runs through the process of setting up my blog using Hakyll. We'll cover some of the customisations I adopted and modified.
+
+<!--more-->
+
 You may have noticed that this blog is proudly powered by Hakyll. [Many others](https://jaspervdj.be/hakyll/examples.html) have posted about setting up or transitioning to a Hakyll based blog, but I thought I'd recount my experience anyway. I'm a novice with Haskell, so forgive me if some of the following isn't quite the Haskell way. You can find the source code for my Hakyll blog at [https://github.com/keithschulze/keithschulze.github.io/]
 
 I won't cover setting up RSS because there are other posts and an official tutorial on the Hakyll site that cover this.
