Drafting and enhancements in prep for publishing first blog

--- a/drafts/Hakyll/2018-11-30-hakyll.md
+++ b/drafts/Hakyll/2018-11-30-hakyll.md
@@ -3,16 +3,14 @@ title: Hakyll
 tags: haskell, hakyll
 ---
 
-This post runs through the process of setting up my blog using Hakyll. We'll cover some of the customisations I adopted and modified.
+If you want to host your own static site and blog, you should consider Hakyll. It's easy to get started, highly customizable and you get learn a bit of Haskell along the way. I'll tell you how I went about building my blog using Hakyll.
 
-<!--more-->
+<div></div><!--more-->
 
-You may have noticed that this blog is proudly powered by Hakyll. [Many others](https://jaspervdj.be/hakyll/examples.html) have posted about setting up or transitioning to a Hakyll based blog, but I thought I'd recount my experience anyway. I'm a novice with Haskell, so forgive me if some of the following isn't quite the Haskell way. You can find the source code for my Hakyll blog at [https://github.com/keithschulze/keithschulze.github.io/]
-
-I won't cover setting up RSS because there are other posts and an official tutorial on the Hakyll site that cover this.
+You may have noticed that this blog is proudly powered by Hakyll. [Many others](https://jaspervdj.be/hakyll/examples.html) have posted about setting up or transitioning to a Hakyll based blog, but I thought I'd recount my experience anyway. I'm a novice with Haskell, so forgive me if some of the following isn't quite the Haskell way. You can find the source code for my Hakyll blog on [Github](https://github.com/keithschulze/keithschulze).
 
 ## NPM, Bootstrap and lesscss
-I wanted to use NPM/Yarn to manage Bootstrap and other frontend dependencies. I also wanted to use LESS to build CSS. Much of the following is poached directly from [https://meta.plasm.us](https://meta.plasm.us)--Thanks Travis.
+I wanted to use NPM/Yarn to manage Bootstrap and other frontend dependencies. I also wanted to use LESS to build CSS. Much of the following is poached directly from [https://meta.plasm.us](https://meta.plasm.us).
 
 ```haskell
 match (fromList $ lessFiles defaultEngineConfig) $ do
@@ -23,8 +21,7 @@ match (fromList $ lessFiles defaultEngineConfig) $ do
 ```
 
 ## Rendering tags a little differently
-
-The Hakyll website has really nice instructions on how to add tags to a Hakyll blog and how to generate pages that aggregate aritcles containing a tag. Those instructions were pretty straight forward and all I wanted was to style things a little differently. Rather than render the tags as a series of comma-separated links, I wanted to render them as dark coloured tokens instead.
+The Hakyll website has really nice instructions on how to add tags to a Hakyll blog and how to generate pages that aggregate aritcles containing a tag. Those instructions were pretty straight forward and all I wanted was to style things a little differently. Rather than render the tags as a series of comma-separated links, I wanted to render them as dark coloured tokens instead. You can see an example at the top of the page.
 
 ```haskell
 -- Custom tag rendering
@@ -40,7 +37,7 @@ tagRenderLink tag (Just filePath) =
 
 ## Bootstrapifying table, img & blockquote
 
-Bootstrap provides support for nicely styling HTML tables and block-quotes; however, one needs to add the appropriate CSS class attributes to the `table` and `blockquote` HTML elements. Initially I thought I could post process the HTML produced by the `pandocCompiler` using RegExp. Knowing nothing about Regexps in Haskell
+Bootstrap provides support for nicely styled HTML tables and block-quotes; however, one needs to add the appropriate CSS class attributes to the `table` and `blockquote` HTML elements. Initially I thought I could post process the HTML produced by the `pandocCompiler` using Regexs and simply replace the respective HTML elements with those containing the Bootstrap class attributes. Knowing nothing about Regexps in Haskell
 
 ```haskell
 processTables :: String -> String
@@ -54,7 +51,7 @@ processTable ts
   | otherwise = ts
 ```
 
-I pretty soon realised that this wasn't going to handle multiple tables well. Overall, it'd be messy trying to come up with complex Regex rules to handle corner cases. Then an intuition came while I was browsing the Hakyll source and saw the `relativizeUrls` function, which uses `tagsoup` to parse HTML and process each tag. Adding the `table table-striped table-dark` class attributes to each table was dead easy:
+While this work okay for a single table, I pretty soon realised that this wasn't going to handle multiple tables well. Overall, it'd be messy trying to come up with complex Regex rules to handle corner cases. Then an intuition came while I was browsing the Hakyll source and saw the `relativizeUrls` function, which uses `TagSoup` to parse HTML and process each tag. Adding the `table table-striped table-dark` class attributes to each table was dead easy:
 
 ```haskell
 withBootstrapTables :: String -> String
@@ -64,8 +61,8 @@ withBootstrapTables = withTags tag
         tag x = x
 ```
 
-Note that `TS` in the code block above is a qualified import of TagSoup i.e., `import qualified Text.HTML.TagSoup as TS`.
-This maps over each tag using `withTags :: (TS.Tag String -> TS.Tag String) -> String -> String`, matches the `TS.TagOpen` tags with a name "table" and adds the `table table-striped table-dark` class attribute.
+Note that `TS` in the code block above is a qualified import of TagSoup.
+This traverses (or maps) over each tag in the DOM using `withTags :: (TS.Tag String -> TS.Tag String) -> String -> String` and matches on `TS.TagOpen` element with a name "table" and adds the `table table-striped table-dark` class attribute.
 
 Making tables responsive is a slightly more tricky problem because it requires the `table` element to be wrapped in a `div` with the `table-responsive-lg` class attribute, which isn't possible using the `withTags` function. Turns out Hakyll recently (as of [version 4.12.0.0](https://github.com/jaspervdj/hakyll/blob/v4.12.0.0/CHANGELOG.md#hakyll-41200)) added a related function `withTagList :: ([TS.Tag String] -> [TS.Tag String]) -> String -> String`. In this case, we need to provide a function that takes as input a list of all the Tags and returns a list of Tags. The nice thing about this is that we can fold over the list as opposed to map, which means we have an oppotunity to add extra elements if need be.
 
